# axum-crud

./: Cargo.toml
src/: crud.rs  list.rs  main.rs  prelude.rs  router.rs  traits.rs  types.rs
src/types/: dummy.rs  mod.rs  sub_dummy.rs
