[package]
name = "axum_crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["any", "sqlite", "runtime-tokio"] }
tokio = { version = "1.38.0", features = ["full"] }

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
mime = "0.3.17"
http-body-util = "0.1.1"
