[package]
name = "axum_crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio"] }
tokio = { version = "1.41", features = ["rt-multi-thread"] }
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
tower = { version = "0.5", features = ["util"] }
mime = "0.3"
http-body-util = "0.1"
